tested new jpalayer and model layer and mapping layer successfullty